@@ -22,8 +22,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.jspecify.annotations.Nullable;
 import org.opensearch.client.json.JsonData;
 import org.opensearch.client.json.JsonpMapper;
@@ -39,8 +40,6 @@ import org.opensearch.client.opensearch.core.search.Hit;
 import org.opensearch.client.opensearch.indices.CreateIndexRequest;
 import org.opensearch.client.opensearch.indices.CreateIndexResponse;
 import org.opensearch.client.transport.endpoints.BooleanResponse;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import org.springframework.ai.document.Document;
 import org.springframework.ai.document.DocumentMetadata;
@@ -149,11 +148,12 @@ import org.springframework.util.Assert;
  * @author Thomas Vitale
  * @author inpink
  * @author Sanghun Lee
+ * @author chabinhwang
  * @since 1.0.0
  */
 public class OpenSearchVectorStore extends AbstractObservationVectorStore implements InitializingBean {
 
-	private static final Logger logger = LoggerFactory.getLogger(OpenSearchVectorStore.class);
+	private static final Log logger = LogFactory.getLog(OpenSearchVectorStore.class);
 
 	public static final String COSINE_SIMILARITY_FUNCTION = "cosinesimil";
 
@@ -228,10 +228,10 @@ public class OpenSearchVectorStore extends AbstractObservationVectorStore implem
 		List<float[]> embedding = this.embeddingModel.embed(documents, EmbeddingOptions.builder().build(),
 				this.batchingStrategy);
 		BulkRequest.Builder bulkRequestBuilder = new BulkRequest.Builder();
-		for (Document document : documents) {
+		for (int i = 0; i < documents.size(); i++) {
+			Document document = documents.get(i);
 			OpenSearchDocument openSearchDocument = new OpenSearchDocument(document.getId(),
-					Objects.requireNonNullElse(document.getText(), ""), document.getMetadata(),
-					embedding.get(documents.indexOf(document)));
+					Objects.requireNonNullElse(document.getText(), ""), document.getMetadata(), embedding.get(i));
 
 			// Conditionally set document ID based on manageDocumentIds flag
 			if (this.manageDocumentIds) {
@@ -284,14 +284,18 @@ public class OpenSearchVectorStore extends AbstractObservationVectorStore implem
 				.build();
 
 			DeleteByQueryResponse response = this.openSearchClient.deleteByQuery(request);
-			logger.debug("Deleted {} documents matching filter expression", response.deleted());
+			if (logger.isDebugEnabled()) {
+				logger.debug("Deleted " + response.deleted() + " documents matching filter expression");
+			}
 
 			if (!response.failures().isEmpty()) {
 				throw new IllegalStateException("Failed to delete some documents: " + response.failures());
 			}
 		}
 		catch (Exception e) {
-			logger.error("Failed to delete documents by filter: {}", e.getMessage());
+			if (logger.isErrorEnabled()) {
+				logger.error("Failed to delete documents by filter: " + e.getMessage());
+			}
 			throw new IllegalStateException("Failed to delete documents by filter", e);
 		}
 	}
@@ -377,7 +381,7 @@ public class OpenSearchVectorStore extends AbstractObservationVectorStore implem
 				.hits()
 				.stream()
 				.map(this::toDocument)
-				.collect(Collectors.toList());
+				.toList();
 		}
 		catch (IOException e) {
 			throw new RuntimeException(e);
